# cantare-rs

./: Cargo.toml
crates/abs_buff/: Cargo.toml  README.md
crates/abs_buff/src/: buff_peek_as_input_.rs  buff_read_as_input_.rs  buff_segm_.rs  buff_segm_as_input_.rs  buff_segm_as_output_.rs  buff_write_as_output_.rs  demand_.rs  io.rs  lib.rs  peeker_.rs  reader_.rs  writer_.rs
crates/abs_iter/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/abs_iter/src/: array_.rs  collections_.rs  impl_items_view_.rs  iter_.rs  lib.rs
crates/abs_sync/: Cargo.toml  README.md
crates/abs_sync/src/: async_lock.rs  async_mutex.rs  cancellation.rs  demo_.rs  lib.rs  may_break.rs  may_cancel.rs  ok_or.rs  sync_guard.rs  sync_lock.rs  sync_mutex.rs
crates/atomex/: Cargo.toml  README.md
crates/atomex/src/: atomex_ptr_.rs  atomic_cell_.rs  atomic_count_.rs  atomic_flags_.rs  cmpxch_result_.rs  fetch.rs  lib.rs
crates/atomic_sync/: Cargo.toml  README.md
crates/atomic_sync/src/: lib.rs
crates/atomic_sync/src/mutex/: mod.rs  preemptive.rs  smoke_tests_.rs
crates/atomic_sync/src/rwlock/: mod.rs
crates/atomic_sync/src/rwlock/preemptive/: mod.rs  reader_.rs  rwlock_.rs  tests_.rs  upgrade_.rs  writer_.rs
crates/atomic_sync/src/rwlock/sequential/: acquire_.rs  mod.rs  reader_.rs  rwlock_.rs  upgrade_.rs  writer_.rs
crates/gen_mcf_macro/: Cargo.toml  README.md
crates/gen_mcf_macro/src/: lib.rs
crates/gen_mcf_test/: Cargo.toml
crates/gen_mcf_test/src/: lib.rs  tests_.rs
crates/segm_buff/: Cargo.toml  LICENSE-MIT  README.md
crates/segm_buff/src/: lib.rs  reclaim_.rs  segm_mut_.rs  segm_ref_.rs
