[workspace]
resolver = "3"
members = [
    "crates/atomex",
    "crates/abs_iter",

    "crates/abs_sync",
    "crates/atomic_sync",
    "crates/gen_mcf_macro",
    "crates/gen_mcf_test",

    "crates/abs_buff",
    "crates/segm_buff",
    # "crates/buffex",
]

[workspace.package]
edition = "2024"
authors = ["lino <lino_snsalias@outlook.com>"]

[workspace.dependencies]
funty = { version = "3.0.0-rc2", default-features = false }
pin-project = { version = "1.1.*" }
pin-utils = { version = "*" }
env_logger = { version = "0.11.*" }
log = { version = "0.4.*" }
futures-lite = { version = "2" }
tokio = { version = "1", features = ["full"] }
